--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,7 @@
 spring:
   application:
-    name: agriconnect-dataschedule
-
-server:
-  port: 10006
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+    name: acdataschedule
+  profiles:
+    active: dev
+  config:
+    import: optional:configserver:http://localhost:10002
